<resources>
    <string name="app_name">MyGADApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="gads_logo">Google Africa Developer Scholarship Logo</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_submission">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="submission_error_msg">Submission Not Successful</string>
    <string name="submission_success_msg">Submission Successful</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="project_submission">Project Submission</string>
    <string name="john_doe">John Doe</string>
    <string name="_223_learning_hours_kenya">223 Learning Hours, Kenya</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>

</resources>